<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingPrefix">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.placebit.ui.events.eventScreen.EventViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/motion"
        app:layoutDescription="@xml/collapsing_toolbar"
        tools:context=".ui.MainActivity">


        <ImageView
            android:id="@+id/toolbar_image"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:background="@color/colorPrimary"
            android:contentDescription="@null"
            android:fitsSystemWindows="true"
            android:scaleType="center"
            android:src="@drawable/splash_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            android:src="@drawable/abc_ic_ab_back_material"
            android:tint="?android:attr/textColorPrimaryInverse"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/baseScroll"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_image">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:id="@+id/bodyContainer"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewEventName"
                    style="@style/EventDetailTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:text="Global Gathering"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewDescription"
                    style="@style/EventDetailDesc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Biggest electronic music fest"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="@+id/textViewEventName"
                    app:layout_constraintStart_toStartOf="@+id/textViewEventName"
                    app:layout_constraintTop_toBottomOf="@+id/textViewEventName" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="8dp"
                    android:layout_height="14dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toStartOf="@+id/textViewAddress"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewDescription"
                    app:srcCompat="@drawable/ic_red_pin" />

                <TextView
                    android:id="@+id/textViewAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="Kyiv, Olympic stadium"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/imageView6"
                    app:layout_constraintTop_toTopOf="@+id/imageView6" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="@+id/imageView6"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="@+id/imageView6"
                    app:layout_constraintTop_toBottomOf="@+id/imageView6"
                    app:srcCompat="@drawable/ic_schedule_red" />

                <TextView
                    android:id="@+id/textViewDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="13 july 2020, 07:30 pm"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView7"
                    app:layout_constraintStart_toEndOf="@+id/imageView7"
                    app:layout_constraintTop_toTopOf="@+id/imageView7" />

                <Button
                    android:id="@+id/buttonBuy"
                    style="@style/RedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/buy_ticket"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewDate" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/remaining"
                    android:textSize="14dp"
                    app:layout_constraintEnd_toStartOf="@+id/textView6"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/buttonBuy" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    app:layout_constraintBottom_toBottomOf="@+id/textView5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textView5"
                    app:layout_constraintTop_toTopOf="@+id/textView5" />

                <TextView
                    android:id="@+id/textViewDaysRemainig"
                    style="@style/DaysRemainigValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6 days"
                    app:layout_constraintStart_toStartOf="@+id/textView5"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <TextView
                    android:id="@+id/textViewPrice"
                    style="@style/PriceValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$100"
                    app:layout_constraintStart_toStartOf="@+id/textView6"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textViewDaysRemainig"
                    app:layout_constraintEnd_toStartOf="@+id/textView6"
                    app:layout_constraintStart_toEndOf="@+id/textView5"
                    app:layout_constraintTop_toTopOf="@+id/textView5"
                    app:srcCompat="@android:color/darker_gray" />

                <fragment
                    android:id="@+id/map"
                    class="com.google.android.gms.maps.SupportMapFragment"
                    android:name="com.example.placebit.ui.events.eventScreen.EventFragment"
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewDaysRemainig"/>

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="56dp"
                    android:text="Global Gathering was an annual dance music festival by Angel Festivals Limited. Festivals are held in countries such as the UK, Poland, Russia, Belarus, Ukraine and feature leading electronic music artists from around the globe. The festival has been running since 2001; the concept came about following enormous interest in the opening Code club (now Air), the home of Godskitchen. The organisers recognised that there was room to expand dance music from clubs to outdoor music festival venues."
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/map" />

                <ImageView
                    android:id="@+id/imageViewFav"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_fav_active" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>